--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>JS Homework 9 — Forms & Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
-    <main>
+    <main>  
+      <ul class="nav-list">
+        <li class="nav-btn"><a href="./1-gallery.html">Gallery</a></li>
+        <li class="nav-btn"><a href="./2-form.html">Form</a></li>
+      </ul>
     </main>
 
-    <load src="./partials/footer.html" />
-
     <script type="module" src="./main.js"></script>
+    
   </body>
 </html>
